--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@import be.objectify.examples.auth0.models.User
+@import models.User
 @(title: String, maybeUser: Option[User])(content: Html)
 
 <!DOCTYPE html>
